syntax = "proto3";

package auth.v1alpha;

message Chat {
    string id = 1;
    string content = 2;
}

message Auth {
    string username = 1;
    string password = 2;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
}

message RegisterResponse {
    string message = 1;
}

message ChatUserRequest {
    string token = 1;
    Chat chat = 2;
    string user_id = 3;
}

message ChatGroupRequest {
    string token = 1;
    Chat chat = 2;
    string group_id = 3;
}

message ChatResponse {
    string token = 1;
    repeated Chat chatList = 2;
}

message checkUserRequest {
    string id = 1;
}

message checkUserResponse {
    bool message = 1;
}

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc checkUser(checkUserRequest) returns (checkUserResponse) {}
    rpc ChatWithUser(ChatUserRequest) returns (ChatResponse) {}
    rpc ChatWithGroup(ChatGroupRequest) returns (ChatResponse) {}

  }