syntax = "proto3";
import "../../chat/v1alpha/chat.proto";

package auth.v1alpha;

message Auth {
    string username = 1;
    string password = 2;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
}

message RegisterResponse {
    string message = 1;
}

message ChatRequest {
    string token = 1;
    Chat chat = 2;
}

message ChatResponse {
    string token = 1;
    Chat chat = 2;
}

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Chat(ChatRequest) returns (ChatResponse) {}
  }